<resources>
    <string name="app_name" language="en">We\'ve Got Guts</string>
    <string name="action_settings">Settings</string>
    <string name="verywell">Very Well</string>
    <string name="none">None</string>


    <!-- HBI -->
    <string name="wellbeing">General well-being</string>
    <string name="arthralgia">Arthralgia: Painful and swollen joints</string>
    <string name="uveitis">Uveitis: Sore, red and swollen eyes</string>
    <string name="erythema_nodosum">Erythema nodosum: Painful red rash</string>
    <string name="aphthous_ulcers">Mouth ulcers</string>
    <string name="pyoderma_gangrenosum">Pyoderma gangrenosum: Deep, painful, purple skin ulcers</string>
    <string name="anal_fissure">Anal fissures - tear or breakdown in the skin around the anus </string>
    <string name="new_fistula">Fistula - abnormal opening onto your skin near your anus that may drain fluid.</string>
    <string name="abscess">Abscess - Painful</string>
    <string name="complications">Complications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Simple Clinical Colitis Activity Index -->
    <string name="sccai">Simple Clinical Colitis Activity Index</string>
    <string name="sccaiq1">(1) Over the past week, what is your average number of bowel movements during the day (not including night time)?</string>
    <string name="sccaiq2">(2) Over the past week, what is your average number of bowel movements during the night?</string>
    <string name="sccaiq3">(3) Over the past week, what has been your urgency of defecation?</string>
    <string name="norush">No rush</string>
    <string name="hurry">Hurry</string>
    <string name="Immediately">Immediately</string>
    <string name="Incontinence">Incontinence – stool leaked out before you could get to a toilet</string>
    <string name="sccaiq4">(4) Over the past week, what has been the amount and frequency of blood in your stool?</string>

    <string name="small_traces">Small traces</string>
    <string name="occ_bloody">Occasionally obviously bloody</string>
    <string name="usally_bloody">Usually obviously bloody</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">User Number</string>
    <string name="pref_default_display_name">C0090</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sccai">sccai</string>
    <string name="title_activity_hbi">hbi</string>


</resources>
