<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sccai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="healthhackau2016.guts.sccai"
    tools:showIn="@layout/activity_sccai">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/sccaiq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" />

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progress="0"
            android:id="@+id/seekBar5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayoutStoolFreq">

            <TextView
                android:text="0-3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="1" />

            <TextView
                android:text="4-6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="7-9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text=">9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:text="@string/sccaiq2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar6"
            android:max="2"
            android:progress="0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayoutStoolFreq">

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="1" />

            <TextView
                android:text="1-3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text=">3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <TextView
            android:text="@string/sccaiq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" />

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progress="0"
            android:id="@+id/seekBar5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayoutStoolFreq">

            <TextView
                android:text="No urgency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="1" />

            <TextView
                android:text="Hurry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="Immediately"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="I have accidents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" />

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3"
            android:progress="0"
            android:id="@+id/seekBar5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayoutStoolFreq">

            <TextView
                android:text="No urgency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="1" />

            <TextView
                android:text="Hurry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="Immediately"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="I have accidents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

